--- a/src/_theme/geoscript/static/geoscript.css
+++ b/src/_theme/geoscript/static/geoscript.css
@@ -3,8 +3,8 @@
 body {
     margin: 0 2em;
     padding: 0;
-    background: #122981;
-    color: white;
+    color: #000033;
+    background: white;
     font: 90% "Trebuchet MS", sans-serif;
     border: 0;
 }
@@ -13,11 +13,11 @@ h1, h2, h3, h4, h5 {
     background: transparent !important;
     border: 0 !important;
     padding-left: 0 !important;
-    color: white;
+    color: #000066;
 }
 
 a {
-    color: #ffeeaa;
+    color: #122981;
     text-decoration: none !important;
 }
 
@@ -72,6 +72,10 @@ div.sphinxsidebar li {
     padding-bottom: 0.5em;
 }
 
+div.sphinxsidebar h3, div.sphinxsidebar h4, div.sphinxsidebar h3 a, div.sphinxsidebar h4 a {
+    color: inherit !important;
+}
+
 div.related ul {
     background: transparent;
     border: 0;
@@ -79,7 +83,7 @@ div.related ul {
 }
 
 pre {
-    background: black;
+    background: #EEEEEE;
     font-size: 0.9em;
     border: 0;
     padding: 1em;
