--- a/src/_theme/geoscript/static/geoscript.css
+++ b/src/_theme/geoscript/static/geoscript.css
@@ -40,6 +40,10 @@ div.header h1 {
     font-size: 2.5em;
 }
 
+div.header h3 {
+    margin-bottom: 0.5em;
+}
+
 #top-nav {
     margin: 0;
     padding: 0;
@@ -58,6 +62,18 @@ div.header h1 {
     position: absolute;
     right: 15px;
     top: 30px;
+}
+
+#code-chooser {
+    position: absolute;
+    width: 240px;
+    top: 10px;
+    right: 0;
+    display: none;
+}
+
+.show-chooser {
+    display: none;
 }
 
 div.bodywrapper {
@@ -104,6 +120,10 @@ pre {
     border: 0 none;
 }
 
+.code {
+    display: none;
+}
+
 tt {
     color: inherit;
 }
@@ -129,4 +149,82 @@ div.footer {
 
 .ui-tabs .ui-tabs-panel {
     padding: 0 !important;
+}
+
+.ui-tabs-hide {
+    display: none;
+}
+
+/* fg buttons */
+.fg-button {
+    outline: 0;
+    margin:0 4px 0 0;
+    padding: .4em 1em;
+    text-decoration:none !important;
+    cursor:pointer;
+    position: relative;
+    text-align: center;
+    zoom: 1;
+}
+
+.fg-button .ui-icon {
+    position: absolute;
+    top: 50%;
+    margin-top: -8px;
+    left: 50%;
+    margin-left: -8px;
+}
+
+a.fg-button {
+    float:left;
+}
+
+/* remove extra button width in IE */
+button.fg-button {
+    width:auto;
+    overflow:visible;
+}
+
+.fg-button-icon-left {
+    padding-left: 2.1em;
+}
+.fg-button-icon-right {
+    padding-right: 2.1em;
+}
+.fg-button-icon-left .ui-icon {
+    right: auto;
+    left: .2em;
+    margin-left: 0;
+}
+.fg-button-icon-right .ui-icon {
+    left: auto;
+    right: .2em;
+    margin-left: 0;
+}
+
+.fg-button-icon-solo {
+    display:block;
+    width:8px;
+    text-indent: -9999px;
+}
+.fg-buttonset {
+    float:left;
+}
+.fg-buttonset .fg-button {
+    float: left;
+}
+.fg-buttonset-single .fg-button, .fg-buttonset-multi .fg-button {
+    margin-right: -1px;
+}
+
+.fg-toolbar {
+    padding: .5em;
+    margin: 0;
+}
+.fg-toolbar .fg-buttonset {
+    margin-right:1.5em;
+    padding-left: 1px;
+}
+.fg-toolbar .fg-button {
+    font-size: 1em;
 }
